--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ packaging==20.3
 pep517==0.8.2
 pipenv==2020.11.15
 progress==1.5
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
 pycodestyle==2.6.0
 pyparsing==2.4.6
 python-dotenv==0.15.0
