--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=postgres
     volumes:
-      - ./db:/var/lib/postgresql/data
-  web:
+      - ./db/:/var/lib/postgresql/data:z
+  app:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     ports:
