--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appdirs==1.4.3
 asgiref==3.3.1
 autopep8==1.5.4
+beautifulsoup4==4.9.3
 CacheControl==0.12.6
 certifi==2019.11.28
 chardet==3.0.4
@@ -9,6 +10,9 @@ contextlib2==0.6.0
 distlib==0.3.1
 distro==1.4.0
 Django==3.1.5
+django-bootstrap-form==3.4
+django-bootstrap4==2.3.1
+django-grappelli==2.14.3
 filelock==3.0.12
 gunicorn==20.0.4
 html5lib==1.0.1
@@ -30,6 +34,7 @@ pytz==2020.5
 requests==2.22.0
 retrying==1.3.3
 six==1.14.0
+soupsieve==2.2
 sqlparse==0.4.1
 toml==0.10.2
 urllib3==1.25.8
