--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,13 @@ contextlib2==0.6.0
 distlib==0.3.1
 distro==1.4.0
 dj-database-url==0.5.0
+dj-static==0.0.6
 Django==3.1.5
 django-bootstrap-form==3.4
 django-bootstrap4==2.3.1
 django-grappelli==2.14.3
 django-heroku==0.3.1
+django-toolbelt==0.0.1
 filelock==3.0.12
 gunicorn==20.0.4
 html5lib==1.0.1
@@ -38,6 +40,7 @@ retrying==1.3.3
 six==1.14.0
 soupsieve==2.2
 sqlparse==0.4.1
+static3==0.7.0
 toml==0.10.2
 urllib3==1.25.8
 virtualenv==20.4.2
